test/bad/undefined-type.sam
// ERROR_COUNT: 2
// undefined-type.sam:6:3-6:34: [NotWellDefinedIdentifier]: `HelloWorld` is not well defined.
// undefined-type.sam:6:33-6:34: [UnexpectedType]: Expected: `HelloWorld`, actual: `int`.

class Main {
  function main(): HelloWorld = 1
}
